tests/toy/neg/001084_mutation.toylang
program a = { if a then sleep then else sleep; } .
